# kate-agents

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh
data/: kateagentplugin.desktop
scripts/: install.sh  uninstall.sh
src/: agentloop.cpp  agentloop.h  checkpointmanager.cpp  checkpointmanager.h  configmanager.cpp  configmanager.h  contextmenhander.cpp  contextmenhander.h  editorcontext.cpp  editorcontext.h  ghosttextprovider.cpp  ghosttextprovider.h  ithreadstorage.h  kateagentplugin.cpp  kateagentplugin.h  kateagentplugin.json  llmprovider.cpp  llmprovider.h  openaiprovider.cpp  openaiprovider.h  permissionmanager.cpp  permissionmanager.h  threadjson.cpp  threadjson.h  threadstorage.cpp  threadstorage.h  toolregistry.cpp  toolregistry.h
src/engine/: agent-engine.cpp  agent-engine.h  agent-worker.cpp  agent-worker.h
src/tools/: applydifftool.cpp  applydifftool.h  createdirectorytool.h  diagnosticstool.h  editfiletool.h  findpathtool.h  greptool.h  listdirectorytool.h  readfiletool.h  terminaltool.h  urlfetchtool.h  websearchtool.h
src/ui/: agentconfigpage.cpp  agentconfigpage.h  agentpanel.cpp  agentpanel.h  diffpreviewdialog.cpp  diffpreviewdialog.h  editconfirmationdialog.h  filementionpopup.cpp  filementionpopup.h  inputbar.cpp  inputbar.h  syntaxhighlighter.cpp  syntaxhighlighter.h  threadview.cpp  threadview.h
tests/: CMakeLists.txt  mockthreadstorage.cpp  mockthreadstorage.h  test_advanced_agentloop.cpp  test_advanced_agentpanel.cpp  test_advanced_inputbar.cpp  test_advanced_storage.cpp  test_advanced_threadview.cpp  test_advanced_tools.cpp  test_agent_engine.cpp  test_agent_engine_detailed.cpp  test_agent_loop_logic.cpp  test_agent_worker.cpp  test_agent_worker_detailed.cpp  test_agentloop.cpp  test_agentloop_detailed.cpp  test_agentloop_utils.cpp  test_agentpanel_events.cpp  test_agentpanel_ui.cpp  test_agentpanel_ui_detailed.cpp  test_agentprofile.cpp  test_basics.cpp  test_chatuiflow.cpp  test_checkpointmanager.cpp  test_config_integration.cpp  test_configmanager.cpp  test_configmanager_advanced.cpp  test_configmanager_detailed.cpp  test_configmanager_utils.cpp  test_contextmenu_events.cpp  test_contextmenuhandler.cpp  test_diffpreviewdialog.cpp  test_diffpreviewdialog_events.cpp  test_diffpreviewdialog_ui_detailed.cpp  test_editorcontext.cpp  test_editorcontext_advanced.cpp  test_editorcontext_detailed.cpp  test_engine_functionality.cpp  test_filementionpopup_events.cpp  test_filementionpopup_ui_detailed.cpp  (+65 more)
